Fixing devmode with Java 17 and adding dev_notes documentation