@@ -256,6 +256,7 @@
                             <jvmArguments>
                                 -Dgwt.codeServerPort=9876 -Xdebug
                                 -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=*:5005
+                                --add-opens java.base/java.util=ALL-UNNAMED
                             </jvmArguments>
                         </configuration>
                     </plugin>
@@ -271,6 +272,9 @@
                             <skipCompilation>false</skipCompilation>
                             <draftCompile>true</draftCompile>
                             <style>PRETTY</style>
+                            <jvmArgs>
+                                --add-opens java.base/java.util=ALL-UNNAMED
+                            </jvmArgs>
                         </configuration>
                         <executions>
                             <execution>
